ipc/ipdl/test/ipdl/error/Nullable2.ipdl
union Union {
    nullable int;
};

protocol Nullable2 {
child:
    Msg(Union i);
};
